@@ -3472,6 +3472,13 @@
                 "hidden": "0"
             },
             {
+                "identifier": "banned_ip_range",
+                "value": "",
+                "type": "0",
+                "explain": "Which ip should not be allowed to chat",
+                "hidden": "0"
+            },
+            {
                 "identifier": "update_ip",
                 "value": "127.0.0.1",
                 "type": "0",
